--- a/404.md
+++ b/404.md
@@ -1,4 +1,8 @@
 ---
 permalink: /404.html
 ---
-Wystąpił Błąd
+# Error 404
+
+Strona o podanym adresie nie istnieje.
+
+[Kliknij tutaj](https://kamack38.github.io/), żeby powrócić do strony głównej.
